--- a/ds3/DS3_C3/DS3_C3_S1/DS3_C3_S1_Practice_SAI KIRAN.ipynb
+++ b/ds3/DS3_C3/DS3_C3_S1/DS3_C3_S1_Practice_SAI KIRAN.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3d541417",
+   "metadata": {},
+   "source": [
+    "## Task 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "2fa688d5",
+   "execution_count": 1,
+   "id": "199f102d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,23 +26,17 @@
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import confusion_matrix,ConfusionMatrixDisplay, classification_report"
+    "from sklearn.metrics import confusion_matrix,ConfusionMatrixDisplay, classification_report\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "d9c601ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('DS3_C3_S1_Yelp_Data_Practice.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "45ab4580",
+   "execution_count": 2,
+   "id": "fd39d1e9",
    "metadata": {},
    "outputs": [
     {
@@ -163,29 +165,20 @@
        "4  vYmM4KTsC8ZfQBg-j5MWkw     0       0      0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('DS3_C3_S1_Yelp_Data_Practice.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "db405a58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "review = df.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "25201083",
+   "execution_count": 3,
+   "id": "d022985c",
    "metadata": {},
    "outputs": [
     {
@@ -205,27 +198,20 @@
        "Name: text, Length: 10000, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "review = df.text\n",
     "review"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ec33152e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "62e70e23",
+   "execution_count": 4,
+   "id": "d185e530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "e37ce19a",
+   "execution_count": 5,
+   "id": "483afbb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,18 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "c98c2c92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df= pd.concat([review_cleaned,df.stars],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "b0bddcb1",
+   "execution_count": 6,
+   "id": "e85c94de",
    "metadata": {},
    "outputs": [
     {
@@ -322,19 +298,20 @@
        "4  General Manager Scott Petello good egg go deta...      5"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "final_df= pd.concat([review_cleaned,df.stars],axis=1)\n",
     "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "1adf3ce1",
+   "execution_count": 7,
+   "id": "1aaad090",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +326,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,8 +340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "e8c1f142",
+   "execution_count": 8,
+   "id": "34afca2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "1ecc5b6c",
+   "execution_count": 9,
+   "id": "c5d69004",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +360,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,18 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "827efcdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = clf.predict(docs_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "95adc4b7",
+   "execution_count": 10,
+   "id": "490db9bd",
    "metadata": {},
    "outputs": [
     {
@@ -415,29 +382,20 @@
        "array([4, 5, 4, ..., 4, 4, 4], dtype=int64)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "y_pred = clf.predict(docs_train)\n",
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "9ed78b42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred_test = clf.predict(docs_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "83cfd842",
+   "execution_count": 11,
+   "id": "fd283de1",
    "metadata": {},
    "outputs": [
     {
@@ -446,89 +404,40 @@
        "array([4, 5, 4, ..., 4, 5, 4], dtype=int64)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "y_pred_test = clf.predict(docs_test)\n",
     "y_pred_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "30c8a099",
+   "execution_count": 12,
+   "id": "c2711839",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy test: 0.4215\n",
-      "accuracy train: 0.560125\n"
+      "accuracy of test: 0.4215\n",
+      "accuracy of train: 0.560125\n"
      ]
     }
    ],
    "source": [
-    "print('accuracy test:', accuracy_score(y_test,y_pred_test ))\n",
-    "print('accuracy train:', accuracy_score(y_train,y_pred))"
+    "print('accuracy of test:', accuracy_score(y_test,y_pred_test ))\n",
+    "print('accuracy of train:', accuracy_score(y_train,y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "f08d7003",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0,   0,   0, 114,  28],\n",
-       "       [  0,   0,   0, 172,   6],\n",
-       "       [  0,   0,   0, 306,  14],\n",
-       "       [  0,   0,   0, 615,  84],\n",
-       "       [  0,   0,   0, 433, 228]], dtype=int64)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confusion_matrix(y_test,y_pred_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "86546b7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   1,    0,    0,  501,  105],\n",
-       "       [   0,    0,    0,  705,   44],\n",
-       "       [   0,    0,    1, 1097,   43],\n",
-       "       [   0,    0,    0, 2785,   42],\n",
-       "       [   0,    0,    0,  982, 1694]], dtype=int64)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confusion_matrix(y_train,y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "11808632",
+   "execution_count": 13,
+   "id": "70dbdbd8",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +454,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "cm = confusion_matrix(y_test,y_pred_test)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
     "                              display_labels=clf.classes_)\n",
@@ -556,8 +464,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "1486f2ef",
+   "execution_count": 14,
+   "id": "35f1496b",
    "metadata": {},
    "outputs": [
     {
@@ -580,47 +488,66 @@
     }
    ],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "print(classification_report(y_test,y_pred_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e31c5bc0",
+   "id": "f8fb8c1e",
    "metadata": {},
    "source": [
-    "# TASK2"
+    "## Task 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "44fef390",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "ee70e563",
+   "execution_count": 15,
+   "id": "fca4819e",
    "metadata": {},
    "outputs": [],
    "source": [
     "docs_train, docs_test, y_train, y_test = train_test_split(final_df.text , final_df.stars, test_size = 0.20, random_state = 12)\n",
     "model =  Pipeline([\n",
     "    ('vectorizer', TfidfVectorizer(sublinear_tf=True,max_df=0.5,min_df=1,stop_words=stopwords.words('english'),use_idf=True,smooth_idf=True)),\n",
-    "    ('nb', MultinomialNB())\n",
-    "])"
+    "    ('nb', MultinomialNB())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "89396801",
+   "execution_count": 16,
+   "id": "84bf85c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       5\n",
+       "1       5\n",
+       "2       4\n",
+       "3       5\n",
+       "4       5\n",
+       "       ..\n",
+       "9995    3\n",
+       "9996    4\n",
+       "9997    4\n",
+       "9998    2\n",
+       "9999    5\n",
+       "Name: stars, Length: 10000, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ec0f5302",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +567,7 @@
        "                ('nb', MultinomialNB())])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,8 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "15c6e41b",
+   "execution_count": 18,
+   "id": "50432bf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,8 +588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "fe823d59",
+   "execution_count": 19,
+   "id": "c644cb23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,28 +598,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "7eafffaa",
+   "execution_count": 20,
+   "id": "c0ea42db",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy test: 0.4235\n",
-      "accuracy train: 0.560125\n"
+      "accuracy of test: 0.4235\n",
+      "accuracy of train: 0.560125\n"
      ]
     }
    ],
    "source": [
-    "print('accuracy test:', accuracy_score(y_test,y_pred_test ))\n",
-    "print('accuracy train:', accuracy_score(y_train,y_pred))"
+    "print('accuracy of test:', accuracy_score(y_test,y_pred_test))\n",
+    "print('accuracy of train:', accuracy_score(y_train,y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "871e2716",
+   "execution_count": 21,
+   "id": "80fbaeae",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +636,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "cm = confusion_matrix(y_test,y_pred_test)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
     "                              display_labels=clf.classes_)\n",
@@ -720,8 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "4fcdc778",
+   "execution_count": 22,
+   "id": "9cfcd898",
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +664,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "cm = confusion_matrix(y_train,y_pred)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
     "                              display_labels=clf.classes_)\n",
@@ -749,8 +674,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "d5c395d8",
+   "execution_count": 23,
+   "id": "7312b651",
    "metadata": {},
    "outputs": [
     {
@@ -778,15 +703,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122a187d",
+   "id": "2b4d2dec",
    "metadata": {},
    "source": [
-    "# TASK3"
+    "## Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cf3ad075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.00      0.00      0.00       142\n",
+      "           2       0.00      0.00      0.00       178\n",
+      "           3       1.00      0.00      0.01       320\n",
+      "           4       0.38      0.88      0.53       699\n",
+      "           5       0.63      0.35      0.45       661\n",
+      "\n",
+      "    accuracy                           0.42      2000\n",
+      "   macro avg       0.40      0.25      0.20      2000\n",
+      "weighted avg       0.50      0.42      0.33      2000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test,y_pred_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca6021a1",
+   "id": "edc52d45",
    "metadata": {},
    "source": [
     "    sublinear_tf=True (To Scale the variables)\n",
@@ -821,7 +775,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9f85d6",
+   "id": "f98e69d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b11a9896",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d08b02b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de3657e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583b1fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7173935",
    "metadata": {},
    "outputs": [],
    "source": []
